Cambios de colores y adicion del precio de los ingredientes

--- a/src/modules/orders/customize/orders.customize.less
+++ b/src/modules/orders/customize/orders.customize.less
@@ -23,10 +23,11 @@
         right: 0;
       }
       .drop-all{
-        left: 30%;
-        height: 40%;
-        width: 40%;
-        top: 30%;
+        left: 25%;
+        height: 50%;
+        width: 50%;
+        top: 25%;
+        border-radius: 50%;
       }
       &.active{
         .drop-left{
