--- a/src/modules/share/share.less
+++ b/src/modules/share/share.less
@@ -1,4 +1,6 @@
 ion-header-bar {
+  background: #292F36!important;
+
   .nav-bar-title {
     img {
       max-height: 30px;
@@ -8,8 +10,12 @@ ion-header-bar {
   }
 }
 
+.button-balanced{
+  background-color: #EE233F !important;
+}
+
 .toast_section {
-  background-color: #33cd5f !important;
+  background-color: #EE233F !important;
 }
 
 .border-b {
