se incluye la opción de mostrar texto en la capa del loader

--- a/src/modules/common/tpl/loader.directive.less
+++ b/src/modules/common/tpl/loader.directive.less
@@ -16,6 +16,10 @@ html,body,loader,.custom-gt-loader{
   -ms-transition: all cubic-bezier(.45,.22,.41,.95) 250ms;
   -o-transition: all cubic-bezier(.45,.22,.41,.95) 250ms;
   transition: all cubic-bezier(.45,.22,.41,.95) 250ms;
+
+  h3{
+    color : #FFF3B9;
+  }
 }
 
 .custom-gt-loader.full-opactity{
