--- a/src/modules/orders/customize/orders.customize.less
+++ b/src/modules/orders/customize/orders.customize.less
@@ -56,6 +56,11 @@
     .ingredient {
       img {
         width: 50%;
+
+        &.preview-product-no-overflow{
+          max-width: 46.65px;
+          max-height: 46.65px;
+        }
       }
       &.selected{
         border: #000000 solid 1px;
