--- a/src/modules/location/tpl/locationIndex.less
+++ b/src/modules/location/tpl/locationIndex.less
@@ -6,7 +6,7 @@
   z-index: 1;
 
   &:after{
-    background: #000;
+    background: #292F36;
     content: " ";
     height: 100%;
     left: 0;
@@ -19,6 +19,7 @@
   }
 
   &.show:after{
+    background: #000;
     opacity: 0.5;
   }
 
@@ -49,18 +50,88 @@
         top: 50%;
         transform: translateY(-50%);
 
+        article{
+          background-color: rgba(0,0,0,.4);
+          border-radius: 6px;
+          padding: 2rem 15px;
+
+          aside{
+
+            .input-address{
+              text-align: left;
+              width: 100%;
+            }
+
+            span.label-input-custom{
+              font-size: 12px;
+              text-align: left;
+              width: 100%;
+              color: #ecf0f1;
+            }
+
+            &.inline-items{
+              font-size: 0px;
+
+              .piz-col{
+                font-size: 14px;
+                display : inline-block;
+              }
+            }
+
+            .piz-col{
+              width: 50%;
+            }
+
+            .col-left{
+              padding-right: 7.5px;
+            }
+            .col-right{
+              padding-left: 7.5px;
+            }
+
+            input{
+              background-color: #ecf0f1;
+              width: 30px;
+            }
+
+            select{
+              background-color: #ecf0f1;
+              height: 34px;
+              padding-top: 2px;
+              width: 100%
+            }
+
+            *{
+              display: inline-block;
+              vertical-align: middle;
+            }
+
+          }
+
+          button{
+            background-color: #EE233F;
+            color : #ecf0f1;
+            margin-top: 1rem;
+            width: 100%;
+            font-size: 20px;
+          }
+
+
+        }
+
         p{
           font-size: 28px;
           line-height: 27px;
           font-weight: 900;
-          color: #FFF;
+          color: #ecf0f1;
+          margin-bottom: 1rem;
         }
 
         .input-address{
           background-color: rgba(0,0,0,.5);
           border: 3px solid #FFF;
           border-radius: 5px;
-          color: #FFF;
+          color: #ecf0f1;
           font-size: 20px;
           max-width: 100%;
           height: auto !important;
@@ -68,6 +139,12 @@
           width: 100%;
         }
 
+
+        .button-gps{
+          font-size: 20px;
+          margin-top: 2rem;
+          width: 100%;
+        }
       }
 
     }
