se cambia la fuente de la aplicacion, se modifica el border radius de los inputs y los botones

--- a/src/modules/common/tpl/selectAreaPizza.less
+++ b/src/modules/common/tpl/selectAreaPizza.less
@@ -29,6 +29,7 @@ select-area-pizza{
   width: 100%;
   position: absolute;
   display: block;
+  z-index: 100;
 
   -webkit-transition: all cubic-bezier(.42,.85,.63,1.07) 200ms;
   -moz-transition: all cubic-bezier(.42,.85,.63,1.07) 200ms ;
