--- a/src/modules/orders/customize/orders.customize.less
+++ b/src/modules/orders/customize/orders.customize.less
@@ -67,6 +67,17 @@
       }
     }
   }
+
+  .ingredient.text-right{
+    position: relative;
+
+    .badge.badge-assertive{
+      position: absolute;
+      right: .5rem;
+      top: -.5rem;
+    }
+  }
+
 }
 
 
