--- a/src/modules/share/share.less
+++ b/src/modules/share/share.less
@@ -29,3 +29,23 @@ ion-header-bar {
   }
   .generate-sec(@class, @property, @n, @multiplier, (@start+1));
 }
+
+html *{
+  font-family: cabin;
+}
+
+@font-face {
+  font-family: "cabin";
+  src : url("../fonts/Cabin-Regular.otf");
+}
+
+.button,input{
+  border-radius: 40px;
+}
+
+
+.button-bar{
+  .button{
+    border-radius: 40px !important;
+  }
+}
